# code2obsidian

./: .gitignore  README.md  pyproject.toml  run.py  verify.py
src/code2obsidian/: __init__.py  __main__.py  cli.py  config.py  ctags.py  incremental.py  logging_utils.py  models.py  ollama_client.py  pipeline.py  renderer.py  symbols.py
src/code2obsidian/resources/: arkts.ctags  dart.ctags
tests/: test_basic.py  test_config.py  test_incremental.py  test_lang_map.py
