[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code2obsidian"
version = "0.2.0"
description = "Ctags 物理符号网 + 本地 Ollama 语义摘要的一体化 Obsidian 知识图谱生成器"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "code2obsidian contributors" }]
keywords = ["ctags", "obsidian", "ollama", "knowledge-graph", "code-analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
toml = [
    # 仅 Python < 3.11 才需要；3.11+ 已内置 tomllib。即便不装也有内置 mini 解析器兜底。
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
code2obsidian = "code2obsidian.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/code2obsidian"
Issues = "https://github.com/your-org/code2obsidian/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
